--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="utf-8">
   <title>vue-demo</title>
+  <style>
+  *{font-family:"Microsoft Yahei"}
+  </style>
 </head>
 
 <body>
