--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
   <div id="app"></div>
-  <div class="modal"></div>
+  <div id="page2"></div>
   <script src="/dist/build.js"></script>
 </body>
 
