--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <div id="app"></div>
   <div id="page2"></div>
-  <script src="/dist/build.js"></script>
+  <script src="./dist/build.js"></script>
 </body>
 
 </html>
